--- a/app/src/main/res/layout/recherche_nom.xml
+++ b/app/src/main/res/layout/recherche_nom.xml
@@ -48,13 +48,13 @@
 
     <ListView
         android:id="@+id/lvResultNomMed"
-        android:layout_width="373dp"
-        android:layout_height="484dp"
+        android:layout_width="413dp"
+        android:layout_height="476dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.935" />
+        app:layout_constraintVertical_bias="0.937" />
 
     <TextView
         android:id="@+id/messageRechNom"
@@ -66,5 +66,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.279" />
+
+    <TextView
+        android:id="@+id/lvCoeffRechMed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="9dp"
+        android:text="@string/coefficient_de_notori_t"
+        app:layout_constraintBottom_toTopOf="@+id/lvResultNomMed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.943"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRechNomMed"
+        app:layout_constraintVertical_bias="0.437" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
