--- a/app/src/main/res/layout/recherche_nom.xml
+++ b/app/src/main/res/layout/recherche_nom.xml
@@ -50,11 +50,11 @@
         android:id="@+id/lvResultNomMed"
         android:layout_width="413dp"
         android:layout_height="476dp"
+        android:layout_marginTop="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.937" />
+        app:layout_constraintTop_toBottomOf="@+id/etNomMed" />
 
     <TextView
         android:id="@+id/messageRechNom"
