--- a/app/src/main/res/layout/listview_medecin_layout.xml
+++ b/app/src/main/res/layout/listview_medecin_layout.xml
@@ -100,13 +100,14 @@
     <View
         android:layout_width="1dp"
         android:layout_height="44dp"
+        android:layout_marginTop="12dp"
         android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/medCp"
         app:layout_constraintEnd_toStartOf="@+id/medAdresse"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toEndOf="@+id/medPrenom"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.481"
+        app:layout_constraintTop_toTopOf="@+id/medPrenom"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
